--- a/package.json
+++ b/package.json
@@ -6,7 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "eslint": "eslint '*/**/*.{ts,tsx}'",
+    "format": "prettier --write '**/*.{ts,tsx,json,css,md,html}' --ignore-path .prettierignore",
+    "prettier:check": "prettier --check '**/*.{ts,tsx,json,css,md,html}' --ignore-path .prettierignore"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint '*/**/*.{ts,tsx}'  ",
+      "git add"
+    ],
+    "*.{json,md,yml}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "react": "^18",
@@ -15,11 +34,16 @@
     "mongodb": "^5.6.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-testing-library": "^5.11.0",
+    "prettier": "^2.8.8"
+  },
+  "optionalDependencies": {
+    "husky": "^4.3.0",
+    "lint-staged": "^10.3.0"
   }
 }
