--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "13.5.4",
-    "mongodb": "^5.6.0"
+    "mongodb": "^5.6.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
