--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "spin.js": "^4.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
