--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "eslint": "eslint '*/**/*.{ts,tsx}'",
     "format": "prettier --write '**/*.{ts,tsx,json,css,md,html}' --ignore-path .prettierignore",
-    "prettier:check": "prettier --check '**/*.{ts,tsx,json,css,md,html}' --ignore-path .prettierignore"
+    "prettier:check": "prettier --check '**/*.{ts,tsx,json,css,md,html}' --ignore-path .prettierignore",
+    "test": "jest --watch"
   },
   "husky": {
     "hooks": {
