--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "eslint": "eslint '*/**/*.{ts,tsx}'",
     "format": "prettier --write '**/*.{ts,tsx,json,css,md,html}' --ignore-path .prettierignore",
     "prettier:check": "prettier --check '**/*.{ts,tsx,json,css,md,html}' --ignore-path .prettierignore",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "test:cypress": "start-server-and-test dev http://localhost:3000/ 'cypress run'",
+    "test:cypress:open": "start-server-and-test dev http://localhost:3000/ 'cypress open'"
   },
   "husky": {
     "hooks": {
@@ -33,8 +35,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^5.3.6",
-    "spin.js": "^4.1.0"
+    "spin.js": "^4.1.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -45,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "babel-plugin-styled-components": "^2.0.7",
+    "cypress": "^13.3.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -53,7 +56,8 @@
     "eslint-plugin-testing-library": "^5.11.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "start-server-and-test": "^2.0.1"
   },
   "optionalDependencies": {
     "husky": "^4.3.0",
